# service-world

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  Rocket.toml
.ci/: before_deploy.sh  script.sh
distribution/deb/: .gitignore  Makefile
distribution/deb/service-world/etc/: sw-present.conf
distribution/deb/service-world/etc/init/: sw-present.conf
distribution/deb/service-world/etc/logrotate.d/: sw-present
distribution/deb/service-world/etc/sw-present/: Rocket.toml  sw-present.conf
distribution/deb/service-world/etc/systemd/system/: sw-present.service
distribution/deb/service-world/var/lib/service-world/templates/: services.html.hbs
distribution/deb/templates/DEBIAN/: conffiles  control  postinst  prerm
examples/: sw-present.conf
examples/templates/: index.html.hbs  services.html.hbs
src/: config.rs  consul.rs  lib.rs  present.rs
templates/: default.hbs  default.html.hbs
