[package]
name = "service_world"
version = "0.0.5"
authors = ["Lukas Pustina <lukas@pustina.net>"]
description = "Discover services from Hasicorp's consul"
repository = "https://github.com/lukaspustina/service-world.git"
documentation = "https://github.com/lukaspustina/service-world.git"
readme = "README.md"
license = "MIT"
keywords = ["network", "consul", "service", "discovery"]
include = [
  "README.md",
  "LICENSE",
  "**/*.rs",
  "Cargo.toml",
]

[badges]
travis-ci = { repository = "lukaspustina/service-world", branch = "master" }
appveyor = { repository = "lukaspustina/service-world", branch = "master" }

[[bin]]
name = "sw-discover"
path = "src/bin/sw-discover.rs"

[[bin]]
name = "sw-present"
path = "src/bin/sw-present.rs"

[dependencies]
ansi_term = "^0.9"
clap = "2"
consul = "^0.2"
error-chain = "^0.11"
handlebars = "^0.29"
rocket = "0.3.3"
rocket_codegen = "0.3.3"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
tabwriter = "^1.0"
toml = "^0.4"
