[package]
name = "service_world"
version = "0.1.1"
authors = ["Lukas Pustina <lukas@pustina.net>"]
description = "Discover services from Hasicorp's consul"
repository = "https://github.com/lukaspustina/service-world.git"
documentation = "https://github.com/lukaspustina/service-world.git"
readme = "README.md"
license = "MIT"
keywords = ["network", "consul", "service", "discovery"]
include = [
  "README.md",
  "LICENSE",
  "**/*.rs",
  "Cargo.toml",
]

[badges]
travis-ci = { repository = "lukaspustina/service-world", branch = "master" }

[features]
bin-discover = ["ansi_term", "clap", "tabwriter"]
bin-present = ["clap", "rocket"]

[[bin]]
name = "sw-discover"
path = "src/bin/sw-discover.rs"
required-features = ["bin-discover"]

[[bin]]
name = "sw-present"
path = "src/bin/sw-present.rs"
required-features = ["bin-present"]

[dependencies]
error-chain = "^0.11"
futures = "0.1"
handlebars = "^0.29"
hyper = "0.11"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
tokio-core = "0.1"
toml = "^0.4"

ansi_term = { version = "^0.11", optional = true }
clap = { version = "^2.0", optional = true }
tabwriter = { version = "^1.0", optional = true }
rocket = { version = "0.4", optional = true }

